[gd_scene load_steps=7 format=3 uid="uid://btos0oij5qmbx"]

[ext_resource type="Script" uid="uid://c4h8pg1j3frv3" path="res://scenes/orquestrador/game.gd" id="1_irio1"]
[ext_resource type="PackedScene" uid="uid://b56m6q8lb21x4" path="res://scenes/prologue/prologue.tscn" id="1_mhhmh"]
[ext_resource type="PackedScene" uid="uid://iy7ihik2nwjv" path="res://scenes/main menu/MenuPrincipal.tscn" id="2_4loax"]
[ext_resource type="Texture2D" uid="uid://42nybdq5liji" path="res://assets/interface/icons/config.png" id="2_in63r"]
[ext_resource type="PackedScene" uid="uid://cpry4snt0vn2j" path="res://scenes/global/effects/transition_screen.tscn" id="3_yf6qs"]
[ext_resource type="PackedScene" uid="uid://6kksgt7lj1ch" path="res://scenes/menu pausa/MenuPausa.tscn" id="4_31066"]

[node name="Game" type="Node"]
script = ExtResource("1_irio1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.957
anchor_right = 1.0
anchor_bottom = 0.076
offset_left = 0.0400391
offset_bottom = 0.279995
grow_horizontal = 0
icon = ExtResource("2_in63r")
flat = true

[node name="SceneContainer" type="Node" parent="."]

[node name="Prologue" parent="." instance=ExtResource("1_mhhmh")]

[node name="CanvasLayer" parent="Prologue/Player" index="1"]
visible = false

[node name="TouchScreenJoystick" parent="Prologue/Player/CanvasLayer" index="0"]
pivot_offset = Vector2(151, 137.5)

[node name="MenuPrincipal" parent="." instance=ExtResource("2_4loax")]

[node name="TransitionScreen" parent="." instance=ExtResource("3_yf6qs")]

[node name="MenuPausa" parent="." instance=ExtResource("4_31066")]
visible = false

[connection signal="pressed" from="MenuPrincipal/VBoxContainer/Iniciar" to="." method="_on_iniciar_pressed"]
[connection signal="pressed" from="MenuPrincipal/VBoxContainer/Sair" to="." method="_on_sair_pressed"]

[editable path="Prologue"]
[editable path="Prologue/Player/Body"]
[editable path="Prologue/TelaInicial"]
[editable path="MenuPrincipal"]
